tests/rosetta/out/Smalltalk/bitwise-io-1.out
/tmp/bitwise-io-1.st:6: parse error, expected ']'
